Updating to work with node 4.5

--- a/package.json
+++ b/package.json
@@ -16,6 +16,6 @@
     "karma-coverage": "^1.0.0",
     "karma-jasmine": "^1.0.2",
     "karma-phantomjs-launcher": "^1.0.0",
-    "phantomjs-prebuilt": "^2.1.7"
+    "phantomjs": "^2.1.7"
   }
 }
